name: "4 - Add Ingredient And Use In Recipe Flow"
appId: "com.recipedia"
tags:
  - database
  - ingredients-db
---
- runFlow:
    file: "../../flows/parameters/ingredients/navigateToIngredientsSettings.yaml"
    label: "Action - Navigate to Ingredients Settings"

- runFlow:
    file: "../../flows/parameters/ingredients/addNewIngredient.yaml"
    label: "Action - Create new ingredient RecipeIngredient"

- runFlow:
    file: "../../flows/parameters/ingredients/returnToHome.yaml"
    label: "Action - Return to Home screen"

- runFlow:
    file: "../../flows/recipe/adding/manual/en/createRecipeWithIngredient.yaml"
    label: "Action - Create minimal recipe with new ingredient"

- runFlow:
    file: "../../flows/recipe/verifyIngredientInRecipe.yaml"
    label: "Assert - Verify ingredient appears in recipe"

- tapOn:
    id: "SearchScreen::FiltersSelection::0::Chip"
    label: "Action - Remove filter"

- runFlow:
    file: "../../flows/filter/applySeasonFilter.yaml"
    label: "Action - Apply season filter"

- runFlow:
    file: "../../flows/filter/verifyRecipeNotInSeasonFilteredList.yaml"
    label: "Verification - Verify recipe not found with season filter"

- tapOn:
    id: "SearchScreen::FiltersSelection::1::Chip"
    label: "Action - Remove filter on name"

- tapOn:
    id: "SearchScreen::FiltersSelection::0::Chip"
    label: "Action - Remove on-season filter"
